# django-drf-elasticsearch

./: .gitignore  .gitmodules  README.md  docker-compose.yml  pyproject.toml  sample.env
core/: settings.py  urls.py
