[tool.poetry]
name = "django-drf-elasticsearch"
version = "0.1.0"
description = "Testing django REST + ES"
authors = ["ebreton <manu@ibimus.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-elasticsearch-dsl = "^7.2"
djangorestframework = "^3.12"
elasticsearch = "^7.14"
elasticsearch-dsl = "^7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
